--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@angular/compiler": "~9.0.5",
     "@angular/core": "~9.0.5",
     "@angular/forms": "~9.0.5",
+    "@angular/localize": "^9.1.12",
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@pazznetwork/ngx-chat": "^0.10.2",
     "@xmpp/client": "^0.9.2",
     "angular-ng-autocomplete": "^2.0.1",
